# praca-inzynierska

./: .gitignore  CMakeLists.txt  Calibration.cpp  Disparity.cpp  Disparity.h  Rectification.cpp  Rectification.h  Stereo.cpp  Stereo.h  praca-inzynierska.pro
CameraSync/: .gitignore
CameraSync/app/: build.gradle
CameraSync/app/src/androidTest/java/com/piotrmeller/camerasync/: ExampleInstrumentedTest.java
CameraSync/app/src/main/: AndroidManifest.xml
CameraSync/app/src/main/cpp/: native-lib.cpp
CameraSync/app/src/main/java/com/piotrmeller/camerasync/: Client_old.java  Server_old.java
CameraSync/app/src/main/java/com/piotrmeller/camerasync/activity/: CameraParams.java  ClientActivity.java  MainActivity.java  ServerActivity.java
CameraSync/app/src/main/java/com/piotrmeller/camerasync/camera/: AutoFitTextureView.java  CameraFragment.java  CameraPreview.java
CameraSync/app/src/main/java/com/piotrmeller/camerasync/service/: Client.java  (+3 more)
CameraSync/app/src/main/res/layout/: activity_camera_params.xml  activity_client.xml  activity_main.xml  activity_server.xml  content_main.xml  fragment_camera.xml
CameraSync/app/src/main/res/menu/: menu_main.xml
CameraSync/app/src/main/res/values/: strings.xml
CameraSync/app/src/test/java/com/piotrmeller/camerasync/: ExampleUnitTest.java
CameraSync/gradle/wrapper/: gradle-wrapper.properties
qtsrc/: calibrationworker.cpp  expensivecomputingworker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: Calibration.cpp  Calibration.h  Disparity.cpp  Disparity.h  FeatureMatching.cpp  FeatureMatching.h  ImageStructure.h  Rectification.cpp  Rectification.h  Stereo.cpp  Stereo.h  StereoCalibration.cpp  StereoCalibration.h  main.cpp
windows/: .gitignore  windows.sln
windows/windows/: windows.vcxproj  windows.vcxproj.filters
